--- a/test/index.html
+++ b/test/index.html
@@ -1,28 +1,18 @@
-<!-- HTMLコード -->
 <div class="tabs">
-  <input type="radio" name="tab_name" id="tab1" checked>
-  <label class="tab_class" for="tab1">タブ1</label>
-  <div class="content_class">
-    <p>タブ1のコンテンツを表示します</p>
+  <input id="tab01" type="radio" name="tab_switch" checked>
+  <label class="tab_label" for="tab01">タブ01</label>
+  <input id="tab02" type="radio" name="tab_switch">
+  <label class="tab_label" for="tab02">タブ02</label>
+  <input id="tab03" type="radio" name="tab_switch">
+  <label class="tab_label" for="tab03">タブ03</label>
+    
+  <div class="tab_content" id="tab01_content">
+    <p>タブ01の内容を表示しています。</p>
   </div>
-  <input type="radio" name="tab_name" id="tab2" >
-  <label class="tab_class" for="tab2">タブ2</label>
-  <div class="content_class">
-    <p>タブ2のコンテンツを表示します</p>
+  <div class="tab_content" id="tab02_content">
+    <p>タブ02の内容を表示しています。</p>
   </div>
-  <input type="radio" name="tab_name" id="tab3" >
-  <label class="tab_class" for="tab3">タブ3</label>
-  <div class="content_class">
-    <p>タブ3のコンテンツを表示します</p>
-  </div>
-  <input type="radio" name="tab_name" id="tab4" >
-  <label class="tab_class" for="tab4">タブ4</label>
-  <div class="content_class">
-    <p>タブ4のコンテンツを表示します</p>
-  </div>
-  <input type="radio" name="tab_name" id="tab5" >
-  <label class="tab_class" for="tab5">タブ5</label>
-  <div class="content_class">
-    <p>タブ5のコンテンツを表示します</p>
+  <div class="tab_content" id="tab03_content">
+    <p>タブ03の内容を表示しています。</p>
   </div>
 </div>
