--- a/test/index.html
+++ b/test/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="./style.css"/>
 <div class="wrap-tab">
   <input id="tab-radio1" class="tab-radio" name="tab" type="radio" checked>
   <input id="tab-radio2" class="tab-radio" name="tab" type="radio">
