--- a/test1/index.html
+++ b/test1/index.html
@@ -1,4 +1,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<link rel="stylesheet" href="./style.css"/>
 <div id="topics">
   <ul class="tab flexbox fw">
     <li class="select">TAB01</li>
