--- a/test1/index.html
+++ b/test1/index.html
@@ -1,22 +1,18 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<link rel="stylesheet" href="./style.css"/>
-<div id="topics">
-  <ul class="tab flexbox fw">
-    <li class="select">TAB01</li>
-    <li>TAB02</li>
-  </ul>
-  <!-- 切り替えのタブ -->
- 
-<div class="topicon">
-            <div>
-              <p>ここにTAB01の中身が入ります。</p>
-            </div>
-            <!-- tab01 -->
-             
-            <div class="hide">
-              <p>ここにTAB02の中身が入ります。</p>
-            </div>
- <!-- tab02 -->
- </div>
-   
-   </div>
+<div class="tabs">
+  <input id="tab01" type="radio" name="tab_switch" checked>
+  <label class="tab_label" for="tab01">タブ01</label>
+  <input id="tab02" type="radio" name="tab_switch">
+  <label class="tab_label" for="tab02">タブ02</label>
+  <input id="tab03" type="radio" name="tab_switch">
+  <label class="tab_label" for="tab03">タブ03</label>
+    
+  <div class="tab_content" id="tab01_content">
+    <p>タブ01の内容を表示しています。</p>
+  </div>
+  <div class="tab_content" id="tab02_content">
+    <p>タブ02の内容を表示しています。</p>
+  </div>
+  <div class="tab_content" id="tab03_content">
+    <p>タブ03の内容を表示しています。</p>
+  </div>
+</div>
