--- a/test1/index.html
+++ b/test1/index.html
@@ -1,4 +1,4 @@
-<style type="./style.css">
+<link rel="stylesheet" href="./style.css"/>
 <div class="tabs">
   <input id="tab01" type="radio" name="tab_switch" checked>
   <label class="tab_label" for="tab01">タブ01</label>
