--- a/test1/index.html
+++ b/test1/index.html
@@ -7,6 +7,170 @@
     
   <div class="tab_content" id="tab01_content">
     <p>タブ01の内容を表示しています。</p>
+    ="{.data.password}" | base64 -d ; echo`
+
+![webui](./image/setup/access-webui.png)
+### レポジトリの登録
+
+同期させるGitのレポジトリを登録します。
+
+Settings - > Repositories と進み CONEECT REPOをクリックします　
+![CONEECT REPO](./image/setup/add-repo-setting.png)
+上の画面上で各項目を次のように設定
+```
+Choose your connection method: VIA HTTPS
+Type: git
+Project: default
+Repository URL: https://github.com/自身のアカウント名/cndt2023-handson
+```
+CONNECTをクリックして、下記のように表示されていることを確認して下さい。
+![CONNECT](./image/setup/add-repo-complete.png)
+
+
+## デモアプリのデプロイ
+試しにデモアプリのデプロイを行い、Argo CDの一連の操作を行います。
+
+Argo CDに同期させるGitリポジトリをを準備します。
+```bash
+git clone https://github.com/自身のアカウント名/cndt2023-handson.git
+```
+Applicationsの画面において + NEW APPをクリックします![Applications](./image/demoapp/new-app.png)
+上の画面上で各項目を次のように設定します。
+```
+GENERAL
+  Application Name: argocd-demo
+  Project Name: default
+  SYNC POLICY: Manual
+  SYNC OPTIONS: AUTO CREATE NAMESPACE [v]
+  SOURCE
+    Repository URL: https://github.com/自身のアカウント名/cndt2023-handson
+    Revision: main
+    Path: chapter05_argocd/app/default
+  DESTINATION
+    Cluster URL: https://kubernetes.default.svc
+    Namespace: argocd-demo
+```
+設定できたら、CREATEをクリックして、下記のように表示されていることを確認して下さい。
+![create](./image/demoapp/create.png)
+![create2](./image/demoapp/create2.png)
+
+ページ上部にあるSYNCをクリックして、無事デプロイされると下記のように表示されていることを確認して下さい。
+
+![sync](./image/demoapp/sync.png)
+ブラウザから
+http://app.argocd.vmXX.handson.cloudnativedays.jp
+へアクセスして確認してみてください。アプリケーションが表示され青い色のタイルが出てくるのが確認できます。
+
+![demo app](./image/demoapp/demo-app.png)
+
+上記の手順でGitに保存しているマニフェストを参照して、アプリケーションのデプロイを行いました。次にGitの変更にKubernetes Clusterを同期させます。
+
+app/default/deployment.yamlの編集を行います。 imageのtagをblueからgreenに変更します。
+```
+image: argoproj/rollouts-demo:green
+```
+差分をforkしたmainブランチ（Argo CDのappを作成する際に指定したブランチ）に取り込みます。
+```
+git push origin main
+```
+Argo CDはデフォルトでは3分に一回の頻度でブランチを確認し、差分を検出しています。 3分待てない場合には、ページ上部にある [REFRESH]をクリックします。下記のようにdeploymentにおいて差分が検出されます。（黄色で表示されているOutOfSyncが差分があることを示しています） ちなみにAppの設定において、SYNC POLICYをManualでなくAutoにしていた場合には、ここでOutOfSyncを検知すると自動でArgoCDがSyncを実行します。
+![blue2green](image/demoapp/blue2green.png)
+Gitの変更をKubernetes Clusterに反映させるためにページ上部にあるSYNCをクリックして、下記のように表示されていることを確認して下さい。
+![blue2green](image/demoapp/blue2green-sync.png)
+http://app.argocd.vmXX.handson.cloudnativedays.jp
+へアクセスして確認するとタイルが青から緑に変わったことが確認できます。
+![blue2green](image/demoapp/blue2green-demoapp.png)
+## Kustomizeを使ったデプロイ
+ArgoCD上でマニフェストの管理ツールである「Kustomize」を利用した、開発環境と本番環境の2つのマニフェスト管理を行います。
+
+Applicationsの画面において + NEW APPをクリックし、本番環境・開発環境それぞれのアプリケーションを作成します。
+[Applications](./image/demoapp/new-app.png)
+上の画面上で各項目を次のように設定します。(開発環境と本番環境で分けて表示してある項目は、それぞれ設定してください)
+```
+GENERAL
+  Application Name: 
+    開発環境: argocd-kustomize-dev
+    本番環境: argocd-kustomize-prd
+  Project Name: default
+  SYNC POLICY: Manual
+  SYNC OPTIONS: AUTO CREATE NAMESPACE [v]
+  SOURCE
+    Repository URL: https://github.com/自身のアカウント名/cndt2023-handson
+    Revision: main
+    Path:
+      開発環境: chapter05_argocd/app/Kustomize/overlays/dev
+      本番環境: chapter05_argocd/app/Kustomize/overlays/prd
+  DESTINATION
+    Cluster URL: https://kubernetes.default.svc
+    Namespace: 
+      開発環境: argocd-kustomize-dev
+      本番環境: argocd-kustomize-prd
+```
+設定できたら、CREATEをクリックします
+![Kustomize-create](image/demoapp/Kustomize-create.png)
+### 開発環境
+![Kustomize-create](image/demoapp/Kustomize-create2-dev.png)
+### 本番環境
+![Kustomize-create](image/demoapp/Kustomize-create2-prd.png)
+ページ上部にある SYNCをクリックします(開発環境の場合はpodが1個、本番環境の場合はpodが2個出来るのが確認できます。)
+### 開発環境
+![Kustomize-dev](image/demoapp/Kustomize-sync-dev.png)
+### 本番環境
+![Kustomize-prd](image/demoapp/Kustomize-sync-prd.png)
+
+
+ブラウザで各環境へアクセスして確認してみてください。タイルの色が開発環境と本番環境で違う事が確認できます。
+  * 開発環境: dev.kustomize.argocd.vmXX.handson.cloudnativedays.jp
+  * 本番環境: prd.kustomize.argocd.vmXX.handson.cloudnativedays.jp
+## Helmを使ったデプロイ
+KubernetesのパッケージマネージャーのHelmを利用したデプロイを行います。
+
+Applicationsの画面において + NEW APPをクリックします
+![Applications](./image/demoapp/new-app.png)
+上の画面上で各項目を次のように設定します。
+```
+GENERAL
+  Application Name: argocd-helm
+  Project Name: default
+  SYNC POLICY: Manual
+  SYNC OPTIONS: AUTO CREATE NAMESPACE [v]
+  SOURCE
+    Repository URL: https://github.com/自身のアカウント名/cndt2023-handson
+    Revision: main
+    Path: chapter05_argocd/app/Helm/rollouts-demo
+  DESTINATION
+    Cluster URL: https://kubernetes.default.svc
+    Namespace: argocd-helm
+```
+設定できたら、CREATEをクリックします
+![helm-create](./image/demoapp/helm-create.png)
+![helm-create2](./image/demoapp/helm-create2.png)
+ページ上部にある SYNCをクリックします（無事デプロイされると下記のようになります）
+![helm-sync](./image/demoapp/helm-sync.png)
+ブラウザで
+helm.argocd.vmXX.handson.cloudnativedays.jp
+アクセスして確認してみてください。Helmを使ってデプロイが出来ている事が確認できます。
+
+## 作成したデモアプリを削除
+各アプリのDELETEをクリックします
+
+Applications画面の場合は、一番右下の端に、
+![delete](image/demoapp/Delete-1.png)
+
+詳細画面の場合は、右上の2番目にあります。
+![delete](image/demoapp/Delete-2.png)
+
+削除する際にアプリケーション名の入力があるので入力してOKをクリックします。
+![delete](image/demoapp/Delete-3.png)
+
+全てのアプリケーションを削除して、初めてアクセスした画面と同じようにして下さい。
+![aplication](image/setup/access-webui.png)
+
+namespaceの削除を行います。
+```
+kubectl delete namespace argocd-demo argocd-kustomize-dev argocd-kustomize-prd argocd-helm
+```
+<br><br>
   </div>
   <div class="tab_content" id="tab02_content">
     <p>タブ02の内容を表示しています。</p>
