--- a/test2/index.html
+++ b/test2/index.html
@@ -23,6 +23,14 @@
     window.$docsify = {
       name: 'Simple Docsify Template',
 
+      tabs: {
+      persist: true, // default
+      sync: true, // default
+      theme: 'classic', // default
+      tabComments: true, // default
+      tabHeadings: true // default
+    }
+
       // Sidebar Configuration
       auto2top: true,
       loadSidebar: true,
