--- a/test2/index.html
+++ b/test2/index.html
@@ -27,7 +27,7 @@
       persist: true, // default
       sync: true, // default
       theme: 'classic', // default
-      tabComments: true, // default
+      //tabComments: true, // default
       tabHeadings: true // default
     }
 
