--- a/test2/index.html
+++ b/test2/index.html
@@ -27,8 +27,8 @@
   //    persist: true, // default
   //    sync: true, // default
      theme: 'classic', // default
-      //tabComments: true, // default
-     // tabHeadings: true // default
+     tabComments: true, // default
+     tabHeadings: true // default
     }
 
       // Sidebar Configuration
