--- a/test2/index.html
+++ b/test2/index.html
@@ -25,10 +25,10 @@
 
       tabs: {
       persist: true, // default
-      sync: true, // default
+     sync: true, // default
      theme: 'classic', // default
   //   tabComments: true, // default
-     tabHeadings: true // default
+  //   tabHeadings: true // default
     }
 
       // Sidebar Configuration
