--- a/test2/index.html
+++ b/test2/index.html
@@ -26,7 +26,7 @@
       tabs: {
       persist: true, // default
  //    sync: true, // default
-     theme: 'classic', // default
+  //   theme: 'classic', // default
   //   tabComments: true, // default
   //   tabHeadings: true // default
     }
