--- a/test2/index.html
+++ b/test2/index.html
@@ -24,7 +24,7 @@
       name: 'Simple Docsify Template',
 
       tabs: {
-      persist: true, // default
+  //    persist: true, // default
  //    sync: true, // default
   //   theme: 'classic', // default
   //   tabComments: true, // default
