--- a/test2/index.html
+++ b/test2/index.html
@@ -24,8 +24,8 @@
       name: 'Simple Docsify Template',
 
       tabs: {
-  //    persist: true, // default
- //    sync: true, // default
+      persist: true, // default
+     sync: true, // default
   //   theme: 'classic', // default
   //   tabComments: true, // default
   //   tabHeadings: true // default
