--- a/test2/index.html
+++ b/test2/index.html
@@ -30,6 +30,12 @@
       },
     },
   },
+        // function
+  markdown: function (marked, renderer) {
+    // ...
+    return marked;
+  },
+};
       tabs: {
       persist: true, // default
      sync: true, // default
