--- a/test2/index.html
+++ b/test2/index.html
@@ -22,6 +22,13 @@
     // Docsify Configuration (see https://docsify.js.org/#/configuration)
     window.$docsify = {
 
+        name: "",
+        repo: "",
+        loadSidebar: true,
+        // 子要素の表示数
+        subMaxLevel: 2
+      
+      };
       // Sidebar Configuration
       auto2top: true,
       loadSidebar: true,
