--- a/test2/index.html
+++ b/test2/index.html
@@ -22,7 +22,7 @@
     // Docsify Configuration (see https://docsify.js.org/#/configuration)
     window.$docsify = {
 
-        name: "",
+        name: "Argo",
         repo: "",
         loadSidebar: true,
         // 子要素の表示数
