--- a/test2/index.html
+++ b/test2/index.html
@@ -27,8 +27,8 @@
         loadSidebar: true,
         // 子要素の表示数
         subMaxLevel: 2
-      
-      };
+      }
+  </script>
       // Sidebar Configuration
       auto2top: true,
       loadSidebar: true,
