--- a/test2/index.html
+++ b/test2/index.html
@@ -18,17 +18,16 @@
 <body>
   <div id="app"></div>
 
-  <script>
-    // Docsify Configuration (see https://docsify.js.org/#/configuration)
-    window.$docsify = {
+<!-- index.html -->
 
-        name: "Argo",
-        repo: "",
-        loadSidebar: true,
-        // 子要素の表示数
-        subMaxLevel: 2
-      }
-  </script>
+<script>
+  window.$docsify = {
+    loadSidebar: true
+  }
+</script>
+<script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+
+  
       // Sidebar Configuration
       auto2top: true,
       loadSidebar: true,
