--- a/test2/index.html
+++ b/test2/index.html
@@ -46,11 +46,11 @@
 </div>
 
 <div id="page1" class="tabcontent">
-    <iframe src="https://github.com/akiran123/cnds2024-argo/blob/main/test2/README_webui.md" style="width:100%; height:500px;"></iframe>
+    <iframe src="https://akiran123.github.io/cnds2024-argo/test2/README_webui.md" style="width:100%; height:500px;"></iframe>
 </div>
 
 <div id="page2" class="tabcontent">
-    <iframe src="https://github.com/akiran123/cnds2024-argo/blob/main/test2/README_cli.md" style="width:100%; height:500px;"></iframe>
+    <iframe src="https://akiran123.github.io/cnds2024-argo/test2/README_cli.md" style="width:100%; height:500px;"></iframe>
 </div>
 <!-- 追加のタブページがあればここに追加 -->
 
