--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div id="Tab1" class="tabcontent">
   <h3>Tab 1 Content</h3>
-  <p>This is the content of tab 1.</p>
+  <p>../chapter05_argocd/README.md</p>
 </div>
 
 <div id="Tab2" class="tabcontent">
