--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<title>111GitHub Markdown CSS</title>
+<title>Markdown</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-<link rel="stylesheet" href="https://sindresorhus.com/github-markdown-css/github-markdown.css">
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-<div id="mdrender" class="markdown-body"></div>
+<div id="mdrender"></div>
 <div id="mdraw" style="display:none;">
 # 見出し1
 ## 見出し2
