--- a/index.html
+++ b/index.html
@@ -3,31 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>１１１Markdown to HTML</title>
+  <title>Markdown to HTML</title>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
   <!-- Markdown content -->
   <textarea id="markdown-content">
-#### **Argo CD with argocli**
+# Hello, Markdown!
 
-# Argo CD
-この章では、Kubernetes上でGitOpsを可能とするCDツールであるArgo CDについて紹介し、導入します。
+This is a **Markdown** example.
 
-
-## GitOpsとCI/CDについて
-CI/CDは、継続的インテグレーション（CI）と継続的デリバリー/デプロイメント（CD）を実現するための手法です。
-CIは、アプリケーションのビルド、テスト、およびコードの統合を自動化するプロセス
-CDは、アプリケーションのデプロイメントを自動化するプロセスです。
-テストやデプロイを自動化することで、オペミスや作業量を減らすことで余ったリソースでアリケーションやソフトウェアの品質を高めたり、リソースサイクルを早めることを目的としている。
-
-GitOpsは、CI/CDを実現するための手法の一つで、Gitのリポジトリの変更をトリガーにCI/CDを実行することで、アプリケーションのデプロイメントを自動化するプロセスです。
-
-
-## Argo CDについて 
-Kubrnetes用のGitOpsツールで、Gitリポジトリに格納されたマニフェストをデプロイすることができます。WEB GUIとCLIの両方で操作することができ、アプリケーションやKuberenetesのリソースの状態を可視化し簡単に管理する事が可能になっています。
-ArgoCDはGitHub等からのWebhookを受け取り、Gitリポジトリに格納されたマニフェストをデプロイすることができるため、開発者のコードPushやPRをトリガーにデプロイまで実行することができます。
-
+- List item 1
+- List item 2
+- List item 3
   </textarea>
 
   <!-- Display HTML content -->
