--- a/index.html
+++ b/index.html
@@ -3,34 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Markdown to HTML</title>
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <title>Tabbed Page</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Markdown content -->
-  <textarea id="markdown-content">
-# Hello, Markdown!
 
-This is a **Markdown** example.
+<div class="tab">
+  <button class="tablinks" onclick="openTab(event, 'Tab1')">Tab 1</button>
+  <button class="tablinks" onclick="openTab(event, 'Tab2')">Tab 2</button>
+  <button class="tablinks" onclick="openTab(event, 'Tab3')">Tab 3</button>
+</div>
 
-- List item 1
-- List item 2
-- List item 3
-### test
-  </textarea>
+<div id="Tab1" class="tabcontent"></div>
+<div id="Tab2" class="tabcontent"></div>
+<div id="Tab3" class="tabcontent"></div>
 
-  <!-- Display HTML content -->
-  <div id="html-content"></div>
-
-  <script>
-    // Get Markdown content
-    var markdownContent = document.getElementById('markdown-content').value;
-
-    // Convert Markdown to HTML
-    var htmlContent = marked(markdownContent);
-
-    // Display HTML content
-    document.getElementById('html-content').innerHTML = htmlContent;
-  </script>
+<script src="script.js"></script>
 </body>
 </html>
