--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
 <div id="Tab2" class="tabcontent"></div>
 <div id="Tab3" class="tabcontent"></div>
 
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
+<script defer>
+  // ここにmarked()関数を含むコードを記述する
+  // Load markdown content
+fetch(tabName + ".md")
+  .then(response => response.text())
+  .then(text => {
+    // Convert markdown to HTML using marked() function
+    var html = marked(text);
+    // Display HTML content in the corresponding tab
+    document.getElementById(tabName).innerHTML = html;
+  })
+  .catch(error => console.error('Error fetching markdown:', error));
+</script>
 <script src="script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
 
 </body>
 </html>
