--- a/test.html
+++ b/test.html
@@ -1,61 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GitHub Page with marked.js</title>
-  <!-- marked.jsをCDN経由で読み込む -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>marked.js Example</title>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <!-- スタイルシート -->
-  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="markdown-content"></div>
 
-<!-- タブ -->
-<div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'Tab1')">Tab 1</button>
-  <button class="tablinks" onclick="openTab(event, 'Tab2')">Tab 2</button>
-  <button class="tablinks" onclick="openTab(event, 'Tab3')">Tab 3</button>
-</div>
-
-<!-- タブのコンテンツ -->
-<div id="Tab1" class="tabcontent"></div>
-<div id="Tab2" class="tabcontent"></div>
-<div id="Tab3" class="tabcontent"></div>
-
-<script>
-  // タブ切り替え時の処理
-  function openTab(evt, tabName) {
-    var i, tabcontent, tablinks;
-    tabcontent = document.getElementsByClassName("tabcontent");
-    for (i = 0; i < tabcontent.length; i++) {
-      tabcontent[i].style.display = "none";
-    }
-    tablinks = document.getElementsByClassName("tablinks");
-    for (i = 0; i < tablinks.length; i++) {
-      tablinks[i].className = tablinks[i].className.replace(" active", "");
-    }
-    document.getElementById(tabName).style.display = "block";
-    evt.currentTarget.className += " active";
-
-    // marked.jsを読み込んだ後に処理を行う
-    loadMarkdown(tabName);
-  }
-
-  // Markdownファイルを読み込んでHTMLに変換し、コンテンツを表示する
-  function loadMarkdown(tabName) {
-    fetch(tabName + ".md")
-      .then(response => response.text())
-      .then(text => {
-        var html = marked(text); // marked()関数を使用してMarkdownをHTMLに変換
-        document.getElementById(tabName).innerHTML = html;
-      })
-      .catch(error => console.error('Error fetching markdown:', error));
-  }
-
-  // 初期状態で最初のタブを開く
-  document.getElementsByClassName("tablinks")[0].click();
-</script>
-
+    <script>
+        // ここでmarked.jsを使ってMarkdownをHTMLに変換し、指定した要素に挿入する
+        var markdownContent = "# Hello, Markdown!";
+        var htmlContent = marked(markdownContent);
+        document.getElementById("markdown-content").innerHTML = htmlContent;
+    </script>
 </body>
 </html>
+
+ 
