--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@
         var markdownContent = "# Hello, Markdown!";
         var htmlContent = marked(markdownContent);
         document.getElementById("markdown-content").innerHTML = htmlContent;
+        marked.parse('# Marked in browser\n\nRendered by **marked**.');
     </script>
 </body>
 </html>
