--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
 
     <script>
         // ここでmarked.jsを使ってMarkdownをHTMLに変換し、指定した要素に挿入する
-        var markdownContent = "# Hello, Markdown!";
+        var markdownContent = "### Hello, Markdown!";
         var htmlContent = marked(markdownContent);
         document.getElementById("markdown-content").innerHTML = htmlContent;
         marked.parse('# Marked in browser\n\nRendered by **marked**.');
