--- a/test5/index.html
+++ b/test5/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css"
     />
-    <link rel="stylesheet" href="./style.css"/>
+      <script src="./styles.css"></script>
   </head>
   <body>
     <header class="l-header">
