--- a/test3/index.html
+++ b/test3/index.html
@@ -3,22 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>marked.js Example</title>
-  <script src="./marked.min.js"></script>
+    <title>Markdown to HTML</title>
 </head>
 <body>
     <div id="markdown-content"></div>
 
+    <!-- Marked.jsのスクリプトを読み込む -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
     <script>
-        // ここでmarked.jsを使ってMarkdownをHTMLに変換し、指定した要素に挿入する
-        var markdownContent = `
-            # Hello, Markdown!
+        // MarkdownをHTMLに変換して表示する関数
+        function convertMarkdownToHTML() {
+            var markdownContent = `
+                # Hello, Markdown!
 
-            This is a **Markdown** example using *Marked.js*.
+                This is a **Markdown** example using *Marked.js*.
             `;
+            var htmlContent = marked(markdownContent);
+            document.getElementById("markdown-content").innerHTML = htmlContent;
+        }
 
-        var htmlContent = marked(markdownContent);
-        document.getElementById("markdown-content").innerHTML = htmlContent;
+        // ページが読み込まれたらMarkdownをHTMLに変換する
+        window.onload = function() {
+            convertMarkdownToHTML();
+        };
     </script>
 </body>
 </html>
