--- a/test3/index.html
+++ b/test3/index.html
@@ -3,30 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markdown to HTML</title>
+    <title>Tab Navigation</title>
+    <style>
+        /* タブのスタイル */
+        .tab {
+            display: none;
+        }
+    </style>
 </head>
 <body>
-    <div id="markdown-content"></div>
+    <div class="tab-buttons">
+        <!-- タブ切替ボタン -->
+        <button onclick="showTab('tab1')">Tab 1</button>
+        <button onclick="showTab('tab2')">Tab 2</button>
+    </div>
 
-    <!-- Marked.jsのスクリプトを読み込む -->
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <!-- タブのコンテンツ -->
+    <div class="tab" id="tab1">
+        <h2>Tab 1 Content</h2>
+        <p>This is the content of Tab 1.</p>
+        <!-- Markdownページへのリンク -->
+        <a href="markdown_page_1.html">Go to Markdown Page 1</a>
+    </div>
+    <div class="tab" id="tab2">
+        <h2>Tab 2 Content</h2>
+        <p>This is the content of Tab 2.</p>
+        <!-- Markdownページへのリンク -->
+        <a href="markdown_page_2.html">Go to Markdown Page 2</a>
+    </div>
 
     <script>
-        // MarkdownをHTMLに変換して表示する関数
-        function convertMarkdownToHTML() {
-            var markdownContent = `
-                # Hello, Markdown!
-
-                This is a **Markdown** example using *Marked.js*.
-            `;
-            var htmlContent = marked_parse(markdownContent);
-            document.getElementById("markdown-content").innerHTML = htmlContent;
+        // タブを表示する関数
+        function showTab(tabId) {
+            // 全てのタブを非表示にする
+            var tabs = document.getElementsByClassName("tab");
+            for (var i = 0; i < tabs.length; i++) {
+                tabs[i].style.display = "none";
+            }
+            // 指定されたタブを表示する
+            document.getElementById(tabId).style.display = "block";
         }
-
-        // ページが読み込まれたらMarkdownをHTMLに変換する
-        window.onload = function() {
-            convertMarkdownToHTML();
-        };
     </script>
 </body>
 </html>
