--- a/test3/index.html
+++ b/test3/index.html
@@ -14,8 +14,8 @@
 <body>
     <div class="tab-buttons">
         <!-- タブ切替ボタン -->
-        <button onclick="showTab('tab1')">Tab 1</button>
-        <button onclick="showTab('tab2')">Tab 2</button>
+        <button onclick="showTab('tab1')">ArgoCD with WebUI</button>
+        <button onclick="showTab('tab2')">ArgoCD with CLI</button>
     </div>
 
     <!-- タブのコンテンツ -->
@@ -23,13 +23,13 @@
         <h2>Tab 1 Content</h2>
         <p>This is the content of Tab 1.</p>
         <!-- Markdownページへのリンク -->
-        <a href="markdown_page_1.html">Go to Markdown Page 1</a>
+        <a href="https://github.com/akiran123/cnds2024-argo/blob/gh-pages/test3/README_webui.md">Go to Markdown Page 1</a>
     </div>
     <div class="tab" id="tab2">
         <h2>Tab 2 Content</h2>
         <p>This is the content of Tab 2.</p>
         <!-- Markdownページへのリンク -->
-        <a href="markdown_page_2.html">Go to Markdown Page 2</a>
+        <a href="https://github.com/akiran123/cnds2024-argo/blob/gh-pages/test3/README_cli.md">Go to Markdown Page 2</a>
     </div>
 
     <script>
