--- a/test2/index.html
+++ b/test2/index.html
@@ -1,32 +1,79 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markdown to HTML</title>
-    <script src="./marked.min.js"></script>
-    <!-- MarkedライブラリのCDNを読み込む -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Stylish Tab Navigation</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f2f2f2;
+        margin: 0;
+        padding: 0;
+    }
+
+    .tab {
+        display: none;
+        padding: 20px;
+    }
+
+    .tab.active {
+        display: block;
+    }
+
+    .tab-buttons {
+        background-color: #333;
+        overflow: hidden;
+    }
+
+    .tab-button {
+        float: left;
+        cursor: pointer;
+        padding: 10px 20px;
+        color: white;
+        transition: background-color 0.3s;
+    }
+
+    .tab-button:hover {
+        background-color: #555;
+    }
+</style>
 </head>
 <body>
-    <div id="markdownContent">
-        # This is a Markdown heading
-        This is a paragraph in **Markdown**.
-        ### test 
-    </div>
 
-    <script>
-        // MarkdownをHTMLに変換する関数
-        function convertMarkdownToHTML() {
-            var markdownContent = document.getElementById('markdownContent').innerHTML;
-            var htmlContent = marked(markdownContent);
-            document.getElementById('markdownContent').innerHTML = htmlContent;
-        }
+<div class="tab-buttons">
+    <div class="tab-button" onclick="openTab(event, 'tab1')">Tab 1</div>
+    <div class="tab-button" onclick="openTab(event, 'tab2')">Tab 2</div>
+</div>
 
-        // ページ読み込み時に変換を実行
-        window.onload = function() {
-            convertMarkdownToHTML();
-        };
-    </script>
+<div id="tab1" class="tab active">
+    <h2>Tab 1 Content</h2>
+    <p>This is the content of Tab 1.</p>
+</div>
+<div id="tab2" class="tab">
+    <h2>Tab 2 Content</h2>
+    <p>This is the content of Tab 2.</p>
+</div>
+
+<script>
+function openTab(evt, tabName) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tab");
+    for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tab-button");
+    for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(tabName).style.display = "block";
+    evt.currentTarget.className += " active";
+}
+
+// 最初のタブを開く
+document.getElementById("tab1").style.display = "block";
+document.getElementsByClassName("tab-button")[0].className += " active";
+</script>
+
 </body>
 </html>
