--- a/test2/index.html
+++ b/test2/index.html
@@ -42,17 +42,17 @@
 <body>
 
 <div class="tab-buttons">
-    <div class="tab-button" onclick="openTab(event, 'tab1')">Tab 1</div>
-    <div class="tab-button" onclick="openTab(event, 'tab2')">Tab 2</div>
+    <div class="tab-button" onclick="openTab(event, 'ArgoCD with WebUI')">Tab 1</div>
+    <div class="tab-button" onclick="openTab(event, 'ArgoCD with CLI')">Tab 2</div>
 </div>
 
 <div id="tab1" class="tab active">
     <h2>Tab 1 Content</h2>
-    <p>This is the content of Tab 1.</p>
+    <p>This is the content of ArgoCD with WebUI.</p>
 </div>
 <div id="tab2" class="tab">
     <h2>Tab 2 Content</h2>
-    <p>This is the content of Tab 2.</p>
+    <p>This is the content of ArgoCD with CLI.</p>
 </div>
 
 <script>
