--- a/test2/index.html
+++ b/test2/index.html
@@ -49,6 +49,7 @@
 <div id="tab1" class="tab active">
     <h2>Tab 1 Content</h2>
     <p>This is the content of ArgoCD with WebUI.</p>
+    <a href="https://github.com/akiran123/cnds2024-argo/blob/gh-pages/test3/README_webui.md">Go to ArgoCD with WEBUI page</a>
 </div>
 <div id="tab2" class="tab">
     <h2>Tab 2 Content</h2>
