--- a/test2/index.html
+++ b/test2/index.html
@@ -54,6 +54,7 @@
 <div id="tab2" class="tab">
     <h2>Tab 2 Content</h2>
     <p>This is the content of ArgoCD with CLI.</p>
+        <a href="https://github.com/akiran123/cnds2024-argo/blob/gh-pages/test3/README_cli.md">Go to ArgoCD with CLI page</a>
 </div>
 
 <script>
