--- a/test2/index.html
+++ b/test2/index.html
@@ -42,8 +42,8 @@
 <body>
 
 <div class="tab-buttons">
-    <div class="tab-button" onclick="openTab(event, 'ArgoCD with WebUI')">Tab 1</div>
-    <div class="tab-button" onclick="openTab(event, 'ArgoCD with CLI')">Tab 2</div>
+    <div class="tab-button" onclick="openTab(event, 'ArgoCD with WebUI')">ArgoCD with WebUI</div>
+    <div class="tab-button" onclick="openTab(event, 'ArgoCD with CLI')">ArgoCD with CLI</div>
 </div>
 
 <div id="tab1" class="tab active">
