--- a/test2/index.html
+++ b/test2/index.html
@@ -46,12 +46,12 @@
     <div class="tab-button" onclick="openTab(event, 'ArgoCD with CLI')">ArgoCD with CLI</div>
 </div>
 
-<div id="tab1" class="tab active">
+<div id="ArgoCD with WebUI" class="tab active">
     <h2>Tab 1 Content</h2>
     <p>This is the content of ArgoCD with WebUI.</p>
     <a href="https://github.com/akiran123/cnds2024-argo/blob/gh-pages/test3/README_webui.md">Go to ArgoCD with WEBUI page</a>
 </div>
-<div id="tab2" class="tab">
+<div id="ArgoCD with CLI" class="tab">
     <h2>Tab 2 Content</h2>
     <p>This is the content of ArgoCD with CLI.</p>
     <a href="https://github.com/akiran123/cnds2024-argo/blob/gh-pages/test3/README_cli.md">Go to ArgoCD with CLI page</a>
